fix color in compare operators/functions (#80)
fix color in compare operators/functions