@@ -23,7 +23,7 @@ public class EqualBool extends Operator {
             List<Roll> rolls = extendAllBuilder(operands, variables);
             checkRollSize(inputValue, rolls, 2, 2);
 
-            Roll left = rolls.get(0);
+            Roll left = rolls.getFirst();
             Roll right = rolls.get(1);
 
             final boolean isEqual = left.equalForValueAndTag(right);
