@@ -24,12 +24,12 @@ public class EqualFilter extends Operator {
             List<Roll> rolls = extendAllBuilder(operands, variables);
             checkRollSize(inputValue, rolls, 2,2);
 
-            Roll left = rolls.get(0);
+            Roll left = rolls.getFirst();
             Roll right = rolls.get(1);
             checkContainsSingleElement(inputValue, right, "right");
 
             ImmutableList<RollElement> diceResult = left.getElements().stream()
-                    .filter(re -> right.getElements().get(0).isEqualValueAndTag(re))
+                    .filter(re -> right.getElements().getFirst().isEqualValueAndTag(re))
                     .collect(ImmutableList.toImmutableList());
             return  Optional.of(ImmutableList.of(new Roll(getBinaryOperatorExpression(inputValue, rolls),
                     diceResult,
